--- a/frontend/productDetail/product-detail.css
+++ b/frontend/productDetail/product-detail.css
@@ -133,7 +133,6 @@ header .container {
 
 .main-image {
     position: relative;
-    height: 500px;
     overflow: hidden;
     background: var(--grey-light);
     margin-bottom: 15px;
@@ -781,4 +780,10 @@ footer .social-icons a {
     .products-slider, .products-row {
         grid-template-columns: 1fr;
     }
+}
+
+.main-product-image{
+    width: 100%;
+    height: 100%;
+    
 }
